--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -30,8 +30,8 @@ body {
 }
 
 iframe.twitter-timeline {
-	height: 150px!important;
-    min-height:380px!important;
+	height: 150px !important;
+	min-height: 380px !important;
 }
 
 .clearfix:before,
@@ -48,13 +48,22 @@ iframe.twitter-timeline {
 	display: none;
 }
 
-.notice, .alert {
-  text-align: center;
-  padding: 1em 0;
-  border-bottom: 1px solid #E9E9E9;
+.notice,
+.alert {
+	text-align: center;
+	padding: 1em 0;
+	border-bottom: 1px solid #E9E9E9;
 }
 
-h1, h2, h3, h4, h5, h6, p, ul, li {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ul,
+li {
 	color: $dark;
 }
 
@@ -82,12 +91,15 @@ h6 {
 	font-size: 1rem;
 }
 
-p, li {
+p,
+li {
 	font-size: 1.1rem;
 	line-height: 1.75;
 }
 
-p, ul, ol {
+p,
+ul,
+ol {
 	margin: 0 0 1.6em 0;
 }
 
@@ -103,6 +115,7 @@ hr {
 #main_navigation {
 	padding: 2.5em 5%;
 	border-bottom: 1px solid $border;
+
 	.name {
 		font-weight: 700;
 		font-size: .8em;
@@ -114,9 +127,11 @@ hr {
 		color: $dark;
 		float: left;
 	}
+
 	nav {
 		float: right;
 		padding-top: 1.5rem;
+
 		a {
 			color: $dark;
 			text-decoration: none;
@@ -137,17 +152,21 @@ hr {
 #main_footer {
 	padding: 2.5em 5%;
 	border-top: 1px solid $border;
+
 	.copyright {
 		float: left;
 		font-size: .9em;
 		margin: 0;
 	}
+
 	nav {
 		float: right;
+
 		i {
 			color: $dark;
 			margin-left: 1em;
 			padding-top: .2em;
+
 			&:hover {
 				color: $highlight;
 			}
@@ -155,7 +174,10 @@ hr {
 	}
 }
 
-input[type="text"], input[type="email"], input[type="password"], textarea {
+input[type="text"],
+input[type="email"],
+input[type="password"],
+textarea {
 	width: 100%;
 	max-width: 100%;
 	height: 3em;
@@ -168,7 +190,8 @@ textarea {
 	min-height: 20em;
 }
 
-input[type="submit"], .button {
+input[type="submit"],
+.button {
 	outline: none;
 	background: transparent;
 	border: 2px solid $border;
@@ -177,6 +200,7 @@ input[type="submit"], .button {
 	color: $dark;
 	text-decoration: none;
 	padding: 1em 2em;
+
 	&:hover {
 		border: 2px solid $highlight;
 		color: $highlight;
