--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,8 @@
     <link href="//fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
+    <meta name="viewport" content="width=device-width, initial-sacle=1">
+
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <%= csrf_meta_tags %>
@@ -13,36 +15,6 @@
   </head>
 
   <body>
-    <header id="main_navigation" class="clearfix">
-        <%= link_to "Saud maruli Sihombing", root_path, class: "name"%>
-        <nav>
-            <%= link_to "Articles", posts_path%>
-            <%= link_to "Projects", projects_path %>
-            <%= link_to "Contact", new_contact_path %>
-
-            <% if user_signed_in? %>
-              <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
-            <% end %>
-            
-          </nav>
-    </header> 
-
-    <% if notice %>
-		  <p class="notice"><%= notice %></p>
-	  <% elsif alert %>
-		  <p class="alert"><%= alert %></p>
-	  <% end %>
-
-    <%= yield %>
-
-  <footer id="main_footer">
-      <p class="copyright">&copy;2019 Saud Maruli Sihombing</p>
-      <nav>
-        <a href="http://facebook.com/sauthrully" target="_blank"><i class="fa fa-facebook"></i></a>
-        <a href="http://twitter.com/sauthrully" target="_blank"><i class="fa fa-twitter"></i></a>
-        <a href="http://instagram.com/s_a_u_t_h" target="_blank"><i class="fa fa-instagram"></i></a>
-        <a href="http://github.com/uthrul" target="_blank"><i class="fa fa-github"></i></a>
-      </nav>
-	</footer>
+    <%= render 'home/navbar' %>
   </body>
 </html>
