--- a/app/views/home/_navbar.html.erb
+++ b/app/views/home/_navbar.html.erb
@@ -1,5 +1,10 @@
 <header id="main_navigation" class="clearfix">
-        <%= link_to "Saud maruli Sihombing", root_path, class: "name"%>
+  <div id="logo">
+		<%= link_to root_path do%>
+		<%= image_tag "logo.png" %>
+	<% end %>
+		</div>
+        
         <nav>
             <%= link_to "Articles", posts_path%>
             <%= link_to "Projects", projects_path %>
