rename title, update logo and Bio

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -116,7 +116,7 @@ hr {
 	padding: 2.5em 5%;
 	border-bottom: 1px solid $border;
 
-	.name {
+	#logo {
 		font-weight: 700;
 		font-size: .8em;
 		letter-spacing: 4px;
