--- a/app/views/home/_navbar.html.erb
+++ b/app/views/home/_navbar.html.erb
@@ -1,7 +1,7 @@
 <header id="main_navigation" class="clearfix">
-  <div id="logo">
+  <div id="logo" >
 		<%= link_to root_path do%>
-		<%= image_tag "logo.png" %>
+		<%= image_tag "logo1.png" %>
 	<% end %>
 		</div>
         
