--- a/app/views/wellcome/index.html.erb
+++ b/app/views/wellcome/index.html.erb
@@ -2,7 +2,7 @@
     <div class="col-1 about homepage_content">
         <h2>About</h2>
         <hr>
-        <p>Hello , My name Saud Maruli Sihombing.</p> 
+        <p>Hello , My name Saud Maruli Sihombing A.K.A Codinghood.</p> 
         <p>I’m Bad Developers living in Indonesia - Jakarta.</p>
         <p>
             I'm not a real programmer, 
