--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,25 +1,25 @@
-<h1 id="page_title">Say Hello!</h1>
+<h1 id="page_title">Hello Everyone :)</h1>
 
 <div class="skinny_wrapper wrapper_padding">
 	<%= form_for @contact do |f| %>
-		<%= f.label :name %><br>
-		<%= f.text_field :name, required: true %>
+	<%= f.label :name %><br>
+	<%= f.text_field :name, required: true %>
 
-		<br>
+	<br>
 
-		<%= f.label :email %><br>
-		<%= f.email_field :email, required: true %>
+	<%= f.label :email %><br>
+	<%= f.email_field :email, required: true %>
 
-		<br>
+	<br>
 
-		<%= f.label :message %><br>
-		<%= f.text_area :message, as: :text %>
+	<%= f.label :message %><br>
+	<%= f.text_area :message, as: :text %>
 
-		<div class="hidden">
-			<%= f.label :nickname %><br>
-			<%= f.text_field :nickname, hint: 'leave this field blank' %>
-		</div>
+	<div class="hidden">
+		<%= f.label :nickname %><br>
+		<%= f.text_field :nickname, hint: 'leave this field blank' %>
+	</div>
 
-		<%= f.submit 'Send Message', class: "button" %>
+	<%= f.submit 'Send Message', class: "button" %>
 	<% end %>
 </div>
